# bases

./: CMakeLists.txt  README.md
include/: bases.hpp
include/bases/: bases.hpp
tests/: base64.cpp  gen.py  test.cpp
